--- a/thanos.css
+++ b/thanos.css
@@ -44,6 +44,9 @@ background: var(--background-image);background-position: center;;background-size
     background-color: rgba(47, 49, 54, 0);
     color: hsla(0, 0%, 100%, 0.8);
 }
+.bda-dark #bda-qem button:hover {
+    background-color: #00b0f4;
+}
 .theme-dark .content-8biNdB p, .theme-dark .content-8biNdB ul li {
     color: #ffffff;
     font-size: larger;
