--- a/thanos.css
+++ b/thanos.css
@@ -53,6 +53,12 @@ background: var(--background-image);background-position: center;;background-size
 .bda-dark #bda-qem button:hover {
     background-color: #00b0f4;
 }
+.uploadModal-2ifh8j .footer-3mqk7D .button {
+    background-color: #8200ff;
+    height: 36px;
+    min-width: 84px;
+    padding: 0!important;
+}
 .theme-dark .content-8biNdB p, .theme-dark .content-8biNdB ul li {
     color: #ffffff;
     font-size: larger;
