--- a/thanos.css
+++ b/thanos.css
@@ -78,6 +78,12 @@ background: var(--background-image);background-position: center;;background-size
     background-color: #00b0f4 !important;
     border-color: rgba(0, 0, 0, 0) !important;
 }
+.theme-dark .messagesPopoutWrap-1MQ1bW {
+    -webkit-box-shadow: 0 2px 10px 0 rgba(0,0,0,20%);
+    background-color: #9a00ff;
+    border: 1px solid rgba(28, 36, 43, 0);
+    box-shadow: 0 2px 10px 0 rgba(0,0,0,.2);
+}
 .bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb,
 .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb,
 .scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb, 
