--- a/thanos.css
+++ b/thanos.css
@@ -69,6 +69,26 @@ background: var(--background-image);background-position: center;;background-size
 .theme-dark .mentionFilter-1PQ6ey .label-12YslM {
     color: hsl(0, 0%, 100%);
 }
+.theme-dark .search-results-wrap {
+    background-color: #8e00ff;
+}
+.theme-dark .search-results-wrap .search-result:before {
+    background-image: -webkit-gradient(linear,left bottom,left top,from(rgba(47,49,54,0)),to(rgba(47, 49, 54, 0)));
+    background-image: linear-gradient(0deg,rgba(47,49,54,0),rgba(47, 49, 54, 0));
+}
+.theme-dark .search-results-wrap .channel-separator .channel-name {
+    background-color: #8e00ff;
+    color: #fff;
+}
+.theme-dark .search-results-wrap .search-header {
+    -webkit-box-shadow: 0 1px 0 rgba(0,0,0,20%);
+    background-color: rgba(47, 49, 54, 0);
+    box-shadow: 0 1px 0 rgba(0,0,0,.2);
+}
+.theme-dark .search-results-wrap .search-result:after {
+    background-image: -webkit-gradient(linear,left top,left bottom,from(rgba(47,49,54,0)),to(rgba(47, 49, 54, 0)));
+    background-image: linear-gradient(180deg,rgba(47,49,54,0),rgba(47, 49, 54, 0));
+}
 .theme-dark .messagesPopoutWrap-1MQ1bW .messagesPopout-24nkyi .emptyPlaceholder-1zh-Eu .body-bvcIjN {
     color: hsl(0, 0%, 100%);
     font-size: 16px;
