--- a/thanos.css
+++ b/thanos.css
@@ -193,32 +193,14 @@ background: var(--background-image);background-position: center;;background-size
     padding: 0 4px;
     text-transform: uppercase;
 }
-.container-2Thooq .avatar-small {
-    -ms-flex-negative: 0;
-    cursor: pointer;
-    flex-shrink: 0;
-    margin: 0 10px 0 0;
+.accountDetails-3k9g4n .username {
+    display: block;
+    max-width: 84px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     position: absolute;
-    left: 150px;
-    top: 670px;
-}
-.container-2Thooq {
-    -ms-flex-align: center;
-    -ms-flex-negative: 0;
-    -webkit-box-align: center;
-    align-items: center;
-    background: rgba(32,34,37,.3);
-    color: #fff;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    flex-shrink: 0;
-    font-size: 14px;
-    font-weight: 400;
-    height: 72px;
-    margin-bottom: 1px;
-    padding: 0 10px;
-    border-top: 6px solid #7600f4;
+    top: 700px;
 }
 .theme-dark .description-3_Ncsb, .theme-dark .labelDescriptor-1PqHgD {
     color: #ffffff;
