--- a/thanos.css
+++ b/thanos.css
@@ -59,6 +59,9 @@ background: var(--background-image);background-position: center;;background-size
     left: 150px;
     top: 650px;
 }
+.contentSelectedText-3wUhMi {
+    background-color: #f04747;
+}
 .theme-dark .body-3iLsc4, .theme-dark .footer-1fjuF6 {
     background-color: rgba(47, 49, 54, 0);
     color: hsla(0, 0%, 100%, 0.8);
