--- a/thanos.css
+++ b/thanos.css
@@ -62,6 +62,10 @@ background: var(--background-image);background-position: center;;background-size
     color: #ffffff;
     transition: opacity .2s ease-in-out;
 }
+.theme-dark .inner-zqa7da {
+    background-color: hsla(0, 0%, 100%, 0);
+    border: 2px solid tomato;
+}
 .container-2Thooq .avatar-small {
     -ms-flex-negative: 0;
     cursor: pointer;
