--- a/thanos.css
+++ b/thanos.css
@@ -53,6 +53,9 @@ background: var(--background-image);background-position: center;;background-size
     font-weight: 500;
     transition: background-color .05s,color .05s;
 }
+.theme-dark .activityFeed-28jde9 {
+    background-color: rgba(54, 57, 63, 0);
+}
 #dv-mount {
     background-color: rgba(47, 49, 54, 0);
     bottom: 0;
