--- a/thanos.css
+++ b/thanos.css
@@ -728,7 +728,7 @@ background-position: center;
 .create-guild-container.deprecated .action.create .action-header {
     color: rgba(114, 137, 218, 0);
 }
-.guilds-wrapper .guilds .friends-icon {
+.guilds-wrapper .guilds .home-icon {
     background-image: url(https://vignette.wikia.nocookie.net/chroniclesofillusion/images/8/83/Avengers_Symbol.png/revision/latest?cb=20161110053512);
     background-position: center;
     background-repeat: no-repeat;
