--- a/thanos.css
+++ b/thanos.css
@@ -68,6 +68,13 @@ background: var(--background-image);background-position: center;;background-size
     right: 0;
     top: 0;
 }
+.theme-dark .cardPrimaryEditable-3KtE4g {
+    background: rgba(32, 34, 37, 0);
+    border-color: rgba(113, 10, 162, 0);
+}
+.theme-dark .questionMark-CWEQZn {
+    background-color: #00b0f4;
+}
 .reaction {
     -moz-user-select: none;
     -ms-flex-negative: 0;
