--- a/thanos.theme.css
+++ b/thanos.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"thanos theme","description":"infinity war themes","author":"Reuben","version":"1.0"}*//{}
+//META{"name":"thanos theme","description":"infinity war themes","author":"Reuben","version":"1.0","server":"https://discord.gg/6WkyaC8"}*//{}
 
 @import url(https://rawgit.com/gco360/thanos-theme/master/thanos.css);
 
