--- a/thanos.css
+++ b/thanos.css
@@ -1,4 +1,12 @@
-
+.theme-dark .guildsWrapper-5TJh6A {
+    background-color: rgba(32, 34, 37, 0);
+}
+.theme-dark .chat-3bRxxu, .theme-dark .chat-3bRxxu form, .theme-dark .content-yTz4x3 {
+    background-color: rgba(54, 57, 63, 0);
+}
+.theme-dark .messagesWrapper-3lZDfY {
+    background-color: rgba(54, 57, 63, 0);
+}
 .app {
 background: var(--background-image);background-position: center;;background-size: cover;}
 .ui-standard-sidebar-view .sidebar-region {background: rgba(0,0,0,0) !important;}
