--- a/thanos.css
+++ b/thanos.css
@@ -7,6 +7,17 @@
 .theme-dark .messagesWrapper-3lZDfY {
     background-color: rgba(54, 57, 63, 0);
 }
+#dv-mount {
+    background-color: rgba(47, 49, 54, 0);
+    bottom: 0;
+    box-sizing: border-box;
+    display: flex;
+    height: 95px;
+    justify-content: center;
+    position: absolute;
+    width: 240px;
+    z-index: 256;
+}
 .app {
 background: var(--background-image);background-position: center;;background-size: cover;}
 .ui-standard-sidebar-view .sidebar-region {background: rgba(0,0,0,0) !important;}
