--- a/thanos.css
+++ b/thanos.css
@@ -4,6 +4,9 @@
 .theme-dark .chat-3bRxxu, .theme-dark .chat-3bRxxu form, .theme-dark .content-yTz4x3 {
     background-color: rgba(54, 57, 63, 0);
 }
+.theme-dark .applicationStore-1pNvnv {
+    background-color: rgba(54, 57, 63, 0);
+}
 .theme-dark .messagesWrapper-3lZDfY {
     background-color: rgba(54, 57, 63, 0);
 }
