--- a/thanos.css
+++ b/thanos.css
@@ -4,6 +4,11 @@
 .theme-dark .chat-3bRxxu, .theme-dark .chat-3bRxxu form, .theme-dark .content-yTz4x3 {
     background-color: rgba(54, 57, 63, 0);
 }
+.theme-dark .tileWrapper-2khh-w {
+    -webkit-box-shadow: 0 0 0 rgba(32,34,37,.15);
+    background-color: rgba(32, 34, 37, 0);
+    box-shadow: 0 0 0 rgba(32,34,37,.15);
+}
 .theme-dark .applicationStore-1pNvnv {
     background-color: rgba(54, 57, 63, 0);
 }
