--- a/thanos.css
+++ b/thanos.css
@@ -4,6 +4,14 @@
 .theme-dark .chat-3bRxxu, .theme-dark .chat-3bRxxu form, .theme-dark .content-yTz4x3 {
     background-color: rgba(54, 57, 63, 0);
 }
+.theme-dark .gameLibrary-TTDw4Y {
+    background-color: rgba(54, 57, 63, 0.04);
+}
+.theme-dark .header-39GIC8 {
+    background-color: rgba(54, 57, 63, 0.02);
+    border-bottom-color: hsla(0,0%,100%,.1);
+    color: hsla(0,0%,100%,.3);
+}
 .theme-dark .tileWrapper-2khh-w {
     -webkit-box-shadow: 0 0 0 rgba(32,34,37,.15);
     background-color: rgba(32, 34, 37, 0);
