--- a/thanos.css
+++ b/thanos.css
@@ -1,3 +1,6 @@
+.theme-dark .attachPopout-1n-ZKM {
+    background-color: #f04747;
+}
 .theme-dark .guildsWrapper-5TJh6A {
     background-color: rgba(32, 34, 37, 0);
 }
