--- a/thanos.css
+++ b/thanos.css
@@ -1,6 +1,10 @@
 .headerSpotify-zpWxgT {
     background: #faa61a;
 }
+.theme-dark .emptyState-N8MHmB {
+    border-color: #2f3136;
+    color: #ffffff;
+}
 .theme-dark .attachPopout-1n-ZKM {
     background-color: #f04747;
 }
