--- a/thanos.css
+++ b/thanos.css
@@ -4,6 +4,9 @@
 .theme-dark .sidebarRegion-VFTUkN {
     background: rgba(47, 49, 54, 0);
 }
+.theme-dark .contentRegion-3nDuYy {
+    background: rgba(54, 57, 63, 0.08);
+}
 .theme-dark .emptyState-N8MHmB {
     border-color: #2f3136;
     color: #ffffff;
