--- a/thanosupdate.css
+++ b/thanosupdate.css
@@ -37,3 +37,23 @@ background: var(--background-image);background-position: center;;background-size
     top: 0;
     width: 2px;
 }
+.theme-dark .isMentioned-N-h9aa {
+    background: rgba(205, 26, 250, 0.1);
+}
+.theme-dark .isMentioned-N-h9aa .mention:hover, .theme-light .isMentioned-N-h9aa .mention:hover {
+    background: transparent;
+    color: #a472da;
+    text-decoration: line-through;
+}
+.theme-dark .wrapper-3WhCwL {
+    background-color: rgba(114,137,218,.1);
+    color: #b5439c;
+}
+.theme-dark .wrapper-35wsBm {
+    background: rgba(67, 181, 129, 0);
+    border-color: rgba(47, 49, 54, 0);
+    border-left: 5px solid #a747f0;
+}
+.guildNameJoined-H7D9uF:hover {
+    text-decoration: none;
+}
