--- a/thanos.theme.css
+++ b/thanos.theme.css
@@ -1,7 +1,7 @@
 //META{"name":"thanos theme","description":"infinity war themes","author":"Reuben","version":"1.0","server":"https://discord.gg/6WkyaC8"}*//{}
 
-@import url(https://rawgit.com/gco360/thanos-theme/master/thanos.css);
-
+@import url(https://raw.githack.com/gco360/thanos-theme/master/thanos.css);
+@import url(https://raw.githack.com/gco360/thanos-theme/master/thanosupdate.css);
 :root{
     --background-image: url(https://images5.alphacoders.com/907/thumb-1920-907053.jpg);
     --background-brightness: 0.6;
