--- a/thanosupdate.css
+++ b/thanosupdate.css
@@ -58,6 +58,10 @@ background: var(--background-image);background-position: center;;background-size
 .newMessagesBar-mujexs:hover {
     background-color: #9f72da;
 }
+.channel-2QD9_O.selected-1HYmZZ a, .channel-2QD9_O:hover a {
+    background-color: #f04747;
+    color: #fff;
+}
 .theme-dark .divider-3gKybi.dividerRed-MKoLlr .dividerContent-2L12VI:after, .theme-dark .divider-3gKybi.dividerRed-MKoLlr .dividerContent-2L12VI:before {
     border-color: rgba(240, 71, 71, 0);
 }
