--- a/thanosupdate.css
+++ b/thanosupdate.css
@@ -73,6 +73,13 @@ background: var(--background-image);background-position: center;;background-size
 .theme-dark .body-3ND3kc {
     background-color: rgba(250, 166, 26, 0);
 }
+.theme-dark .topSectionNormal-2-vo2m {
+    background-color: #9047f0;
+}
+.tabBarContainer-1s1u-z {
+    border-top: 1px solid hsla(0, 0%, 100%, 0);
+    padding-left: 20px;
+}
 .theme-dark .divider-3gKybi.dividerRed-MKoLlr .dividerContent-2L12VI:after, .theme-dark .divider-3gKybi.dividerRed-MKoLlr .dividerContent-2L12VI:before {
     border-color: rgba(240, 71, 71, 0);
 }
