--- a/thanosupdate.css
+++ b/thanosupdate.css
@@ -83,6 +83,11 @@ background: var(--background-image);background-position: center;;background-size
 .theme-dark .divider-3gKybi.dividerRed-MKoLlr .dividerContent-2L12VI:after, .theme-dark .divider-3gKybi.dividerRed-MKoLlr .dividerContent-2L12VI:before {
     border-color: rgba(240, 71, 71, 0);
 }
+.titleBar-AC4pGV {
+	background: rgba(0,0,0,0.34);
+	margin-top: 0px;
+	padding-top: 4px;
+}
 .theme-dark .isMentioned-N-h9aa .mention:hover, .theme-light .isMentioned-N-h9aa .mention:hover {
     background: transparent;
     color: #a472da;
